sidebar desktop and mobile fix

--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
 
     <!-- SIDEBAR-BODY START -->
     <div class="desktopmenu">
-      <a href="#" class="menulink">
+      <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Dashboard">
         <span class="icon ">
           <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path opacity="0.4" d="M16.9408 2H20.3126C21.709 2 22.8404 3.14585 22.8404 4.55996V7.97452C22.8404 9.38864 21.709 10.5345 20.3126 10.5345H16.9408C15.5445 10.5345 14.413 9.38864 14.413 7.97452V4.55996C14.413 3.14585 15.5445 2 16.9408 2Z" fill="#A4B4F2"/>
@@ -753,7 +753,7 @@
       </a>
 
       <div class="accordion" id="accordionDesktopMenu">
-        <div class="accordion-item">
+        <div class="accordion-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Order">
           <h2 class="accordion-header" id="heading-desktop-1">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-desktop-1" aria-expanded="false" aria-controls="collapse-desktop-1">
               <span class="icon">
@@ -789,7 +789,7 @@
           </div>
         </div>
 
-        <a href="#" class="menulink">
+        <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Category">
           <span class="icon">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path opacity="0.4" d="M10.0833 15.958H3.50777C2.67555 15.958 2 16.6217 2 17.4393C2 18.2559 2.67555 18.9207 3.50777 18.9207H10.0833C10.9155 18.9207 11.5911 18.2559 11.5911 17.4393C11.5911 16.6217 10.9155 15.958 10.0833 15.958Z" fill="#8A92A6"/>
@@ -801,7 +801,7 @@
           <span class="text">Category</span>
         </a>
 
-        <div class="accordion-item">
+        <div class="accordion-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Content Manage">
           <h2 class="accordion-header" id="heading-desktop-2">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-desktop-2" aria-expanded="false" aria-controls="collapse-desktop-2">
               <span class="icon">
@@ -838,7 +838,7 @@
           </div>
         </div>
 
-        <div class="accordion-item">
+        <div class="accordion-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Campaign">
           <h2 class="accordion-header" id="heading-desktop-3">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-desktop-3" aria-expanded="false" aria-controls="collapse-desktop-3">
               <span class="icon">
@@ -880,7 +880,7 @@
           </div>
         </div>
 
-        <div class="accordion-item">
+        <div class="accordion-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Lead & promotion">
           <h2 class="accordion-header" id="heading-desktop-4">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-desktop-4" aria-expanded="false" aria-controls="collapse-desktop-4">
               <span class="icon">
@@ -917,7 +917,7 @@
           </div>
         </div>
 
-        <div class="accordion-item">
+        <div class="accordion-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Event Manage">
           <h2 class="accordion-header" id="heading-desktop-5">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-desktop-5" aria-expanded="false" aria-controls="collapse-desktop-5">
               <span class="icon">
@@ -955,7 +955,7 @@
           </div>
         </div>
 
-        <div class="accordion-item">
+        <div class="accordion-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Team Member">
           <h2 class="accordion-header" id="heading-desktop-6">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-desktop-6" aria-expanded="false" aria-controls="collapse-desktop-6">
               <span class="icon">
@@ -995,7 +995,7 @@
           </div>
         </div>
 
-        <div class="accordion-item">
+        <div class="accordion-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Delivery Manage">
           <h2 class="accordion-header" id="heading-desktop-7">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-desktop-7" aria-expanded="false" aria-controls="collapse-desktop-7">
               <span class="icon">
@@ -1039,7 +1039,7 @@
           </div>
         </div>
 
-        <a href="#" class="menulink">
+        <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Sellers">
           <span class="icon">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path opacity="0.4" d="M21.2502 13.4764C20.4292 13.4764 19.7612 12.8145 19.7612 12.001C19.7612 11.1865 20.4292 10.5246 21.2502 10.5246C21.4492 10.5246 21.6402 10.4463 21.7802 10.3076C21.9212 10.1679 22.0002 9.97864 22.0002 9.78146L21.9992 7.10415C21.9992 4.84102 20.1402 3 17.8562 3H6.14416C3.86016 3 2.00116 4.84102 2.00116 7.10415L2.00016 9.86766C2.00016 10.0648 2.07916 10.2541 2.22016 10.3938C2.36016 10.5325 2.55116 10.6108 2.75016 10.6108C3.59916 10.6108 4.23916 11.2083 4.23916 12.001C4.23916 12.8145 3.57116 13.4764 2.75016 13.4764C2.33616 13.4764 2.00016 13.8093 2.00016 14.2195V16.8949C2.00016 19.158 3.85816 21 6.14316 21H17.8572C20.1422 21 22.0002 19.158 22.0002 16.8949V14.2195C22.0002 13.8093 21.6642 13.4764 21.2502 13.4764Z" fill="#8A92A6"/>
@@ -1049,7 +1049,7 @@
           <span class="text">Sellers</span>
         </a>
 
-        <a href="#" class="menulink">
+        <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Customers">
           <span class="icon">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M9.34949 14.8577C5.38569 14.8577 2.00016 15.47 2.00016 17.9173C2.00016 20.3665 5.36416 20.9999 9.34949 20.9999C13.3133 20.9999 16.6989 20.3876 16.6989 17.9403C16.6989 15.4911 13.3349 14.8577 9.34949 14.8577Z" fill="#8A92A6"/>
@@ -1061,7 +1061,7 @@
           <span class="text">Customers</span>
         </a>
 
-        <a href="#" class="menulink">
+        <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Rating Reviews">
           <span class="icon">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path opacity="0.4" d="M12.9765 3.11361L15.203 7.58789C15.367 7.91205 15.6801 8.13717 16.0412 8.18719L21.0422 8.91556C21.3343 8.95658 21.5994 9.11066 21.7784 9.34578C21.9554 9.5779 22.0314 9.87205 21.9884 10.1612C21.9534 10.4013 21.8404 10.6234 21.6674 10.7935L18.0436 14.3063C17.7785 14.5514 17.6585 14.9146 17.7225 15.2698L18.6147 20.2083C18.7097 20.8046 18.3146 21.3669 17.7225 21.48C17.4785 21.519 17.2284 21.478 17.0084 21.3659L12.5474 19.0417C12.2163 18.8746 11.8253 18.8746 11.4942 19.0417L7.03319 21.3659C6.48507 21.657 5.80592 21.4589 5.50086 20.9187C5.38783 20.7036 5.34782 20.4584 5.38483 20.2193L6.27702 15.2798C6.34104 14.9256 6.22001 14.5604 5.95595 14.3153L2.33218 10.8045C1.90108 10.3883 1.88808 9.70296 2.30317 9.27175C2.31217 9.26274 2.32217 9.25274 2.33218 9.24273C2.50421 9.06764 2.73026 8.95658 2.97431 8.92757L7.97539 8.1982C8.33547 8.14717 8.64853 7.92406 8.81357 7.59789L10.9601 3.11361C11.1511 2.72942 11.5472 2.4903 11.9773 2.5003H12.1113C12.4844 2.54533 12.8095 2.77644 12.9765 3.11361Z" fill="#8A92A6"/>
@@ -1071,7 +1071,7 @@
           <span class="text">Rating Reviews</span>
         </a>
 
-        <a href="#" class="menulink">
+        <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Accounts">
           <span class="icon">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M21.9966 8.37513H17.762C15.7913 8.37859 14.1949 9.93514 14.1913 11.8566C14.1886 13.7823 15.7869 15.3458 17.762 15.3484H22.0002V15.6543C22.0002 19.0136 19.9638 21 16.5175 21H7.48372C4.0366 21 2.00016 19.0136 2.00016 15.6543V8.33786C2.00016 4.97862 4.0366 3 7.48372 3H16.514C19.9602 3 21.9966 4.97862 21.9966 8.33786V8.37513ZM6.73972 8.36733H12.3798H12.3833H12.3904C12.8126 8.36559 13.154 8.03019 13.1522 7.61765C13.1504 7.20598 12.8055 6.87318 12.3833 6.87491H6.73972C6.32016 6.87664 5.97972 7.20858 5.97794 7.61852C5.97616 8.03019 6.31749 8.36559 6.73972 8.36733Z" fill="#8A92A6"/>
@@ -1082,7 +1082,7 @@
           <span class="text">Accounts</span>
         </a>
 
-        <a href="#" class="menulink">
+        <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Reports">
           <span class="icon">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path opacity="0.4" d="M18.809 9.021C18.3575 9.021 17.7594 9.011 17.0148 9.011C15.1989 9.011 13.7057 7.508 13.7057 5.675V2.459C13.7057 2.206 13.5038 2 13.2532 2H7.96379C5.49533 2 3.50016 4.026 3.50016 6.509V17.284C3.50016 19.889 5.59038 22 8.16974 22H16.0465C18.506 22 20.5002 19.987 20.5002 17.502V9.471C20.5002 9.217 20.2992 9.012 20.0477 9.013C19.6249 9.016 19.1179 9.021 18.809 9.021Z" fill="#8A92A6"/>
@@ -1093,7 +1093,7 @@
           <span class="text">Reports</span>
         </a>
 
-        <a href="#" class="menulink">
+        <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Marketing">
           <span class="icon">
             <svg class="differicon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#test2)">
@@ -1119,7 +1119,7 @@
           <span class="text">Marketing</span>
         </a>
 
-        <a href="#" class="menulink">
+        <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Inventory">
           <span class="icon">
             <svg class="differicon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#inventoryicon2)">
@@ -1140,7 +1140,7 @@
           <span class="text">Inventory</span>
         </a>
 
-        <a href="#" class="menulink">
+        <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="CRM">
           <span class="icon">
             <svg class="differicon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#crmicon2)">
@@ -1175,7 +1175,7 @@
           <span class="text">CRM</span>
         </a>
 
-        <a href="#" class="menulink">
+        <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Settings">
           <span class="icon">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M12.0124 14.8299C10.4079 14.8299 9.11002 13.5799 9.11002 12.0099C9.11002 10.4399 10.4079 9.17993 12.0124 9.17993C13.6169 9.17993 14.8841 10.4399 14.8841 12.0099C14.8841 13.5799 13.6169 14.8299 12.0124 14.8299Z" fill="#8A92A6"/>
@@ -2621,6 +2621,8 @@
 
   <!--========== BOOTSTRAP JS ============-->
   <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+  <!--========== TOOLTIP JS ============-->
+  <script src="assets/js/bootstrap/tooltip/tooltip.js"></script>
   <!--========== PRELOADER JS ============-->
   <script src="assets/js/preloader/loader.js"></script>
 	<!-- BACK-TO-TOP JS -->
