sidebar arrow size fix

--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
 
     <!-- SIDEBAR-BODY START -->
     <div class="desktopmenu">
-      <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Dashboard">
+      <a href="#" class="menulink active" data-bs-toggle="tooltip" data-bs-placement="right" title="Dashboard">
         <span class="icon ">
           <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path opacity="0.4" d="M16.9408 2H20.3126C21.709 2 22.8404 3.14585 22.8404 4.55996V7.97452C22.8404 9.38864 21.709 10.5345 20.3126 10.5345H16.9408C15.5445 10.5345 14.413 9.38864 14.413 7.97452V4.55996C14.413 3.14585 15.5445 2 16.9408 2Z" fill="#A4B4F2"/>
@@ -753,7 +753,7 @@
       </a>
 
       <div class="accordion" id="accordionDesktopMenu">
-        <div class="accordion-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Order">
+        <div class="accordion-item active" data-bs-toggle="tooltip" data-bs-placement="right" title="Order">
           <h2 class="accordion-header" id="heading-desktop-1">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-desktop-1" aria-expanded="false" aria-controls="collapse-desktop-1">
               <span class="icon">
@@ -838,7 +838,7 @@
           </div>
         </div>
 
-        <div class="accordion-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Campaign">
+        <div class="accordion-item active" data-bs-toggle="tooltip" data-bs-placement="right" title="Campaign">
           <h2 class="accordion-header" id="heading-desktop-3">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-desktop-3" aria-expanded="false" aria-controls="collapse-desktop-3">
               <span class="icon">
@@ -1049,7 +1049,7 @@
           <span class="text">Sellers</span>
         </a>
 
-        <a href="#" class="menulink" data-bs-toggle="tooltip" data-bs-placement="right" title="Customers">
+        <a href="#" class="menulink active" data-bs-toggle="tooltip" data-bs-placement="right" title="Customers">
           <span class="icon">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M9.34949 14.8577C5.38569 14.8577 2.00016 15.47 2.00016 17.9173C2.00016 20.3665 5.36416 20.9999 9.34949 20.9999C13.3133 20.9999 16.6989 20.3876 16.6989 17.9403C16.6989 15.4911 13.3349 14.8577 9.34949 14.8577Z" fill="#8A92A6"/>
