reset button position fix

--- a/index.html
+++ b/index.html
@@ -1203,25 +1203,25 @@
                 <p class="error-message">ID is required</p>
               </div>
 
-              <div class="inputbox errorfield">
+              <div class="inputbox">
                 <input type="text" class="inputfield" placeholder="Random Header">
 
                 <p class="error-message">Input is required</p>
               </div>
 
-              <div class="inputbox errorfield">
+              <div class="inputbox">
                 <input type="text" class="inputfield" placeholder="Random Header">
 
                 <p class="error-message">Input is required</p>
               </div>
               
-              <div class="inputbox errorfield">
+              <div class="inputbox">
                 <input type="text" class="inputfield" placeholder="Random Header">
 
                 <p class="error-message">Input is required</p>
               </div>
 
-              <div class="inputbox selectbox errorfield">
+              <div class="inputbox selectbox">
                 <select class="selectfield">
                   <option value="">Selective field</option>
                   <option value="">Selective field 2</option>
