auth tooltip added

--- a/authentication/register.html
+++ b/authentication/register.html
@@ -135,7 +135,7 @@
 
           <ul class="social-list">
             <li class="social-list-item">
-              <button class="social-list-link">
+              <button class="social-list-link" data-bs-toggle="tooltip" data-bs-placement="top" title="Register with Facebook">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M24.0001 11.9992C24.0001 5.37225 18.6279 0 12 0C5.37242 0 0 5.37225 0 11.9992C0 18.6262 5.37242 24 12 24C18.6281 24 24.0001 18.6262 24.0001 11.9992Z" fill="#395196"/>
                   <path d="M13.0575 9.158V8.0213C13.0575 7.4677 13.427 7.3383 13.6857 7.3383C13.9452 7.3383 15.2811 7.3383 15.2811 7.3383V4.90422L13.0846 4.89453C10.6466 4.89453 10.093 6.711 10.093 7.8739V9.158H8.68359V12.0014H10.1052C10.1052 15.2233 10.1052 19.1082 10.1052 19.1082H12.9477C12.9477 19.1082 12.9477 15.1837 12.9477 12.0014H15.0575L15.317 9.158H13.0575Z" fill="white"/>
@@ -144,7 +144,7 @@
             </li>
 
             <li class="social-list-item">
-              <button class="social-list-link">
+              <button class="social-list-link" data-bs-toggle="tooltip" data-bs-placement="top" title="Register with Google">
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M13.16 7.14584C13.16 6.69084 13.1192 6.25334 13.0433 5.83334H7V8.31542H10.4533C10.3046 9.1175 9.8525 9.79709 9.17292 10.2521V11.8621H11.2467C12.46 10.745 13.16 9.1 13.16 7.14584V7.14584Z" fill="#4285F4"/>
                   <path d="M6.99979 13.4167C8.73229 13.4167 10.1848 12.8421 11.2465 11.8621L9.17271 10.2521C8.59812 10.6371 7.86312 10.8646 6.99979 10.8646C5.32854 10.8646 3.91396 9.73583 3.40937 8.21916H1.26562V9.88166C2.32146 11.9787 4.49146 13.4167 6.99979 13.4167Z" fill="#34A853"/>
@@ -178,9 +178,9 @@
 
 
   <!--========== BOOTSTRAP JS ============-->
-  <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
   <!--========== TOOLTIP JS ============-->
-  <script src="assets/js/bootstrap/tooltip/tooltip.js"></script>
+  <script src="../assets/js/bootstrap/tooltip/tooltip.js"></script>
   <!--========== PRELOADER JS ============-->
   <script src="../assets/js/preloader/loader.js"></script>
 </body>
