verification button text changed

--- a/authentication/verification.html
+++ b/authentication/verification.html
@@ -73,8 +73,8 @@
 
               <div class="row">
                 <div class="submitbox">
-                  <button class="btn-submit d-none" type="button">Send OTP</button>
-                  <a href="changepassword.html" class="btn-submit" role="button">Send OTP</a>
+                  <button class="btn-submit d-none" type="button">Submit OTP</button>
+                  <a href="changepassword.html" class="btn-submit" role="button">Submit OTP</a>
                 </div>
               </div>
             </div>
