favicon location changed

--- a/authentication/confirmedpassword.html
+++ b/authentication/confirmedpassword.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wbuilder | Password Changed</title>
   <!-- FAVICON ICON -->
-  <link rel="shortcut icon" href="../favicon.svg" type="image/svg">
+  <link rel="shortcut icon" href="../assets/images/favicon/favicon.svg" type="image/svg">
   <!-- BOOTSTRAP CSS -->
   <link rel="stylesheet" href="../assets/css/bootstrap/bootstrap.min.css">
   <!-- WBUILDER CSS -->
