--- a/error.html
+++ b/error.html
@@ -11,7 +11,7 @@
   <!-- SITE TITLE -->
   <title>Wbuilder | ERROR 404 NOT FOUND</title>
   <!-- SITE FAVICON -->
-  <link rel="shortcut icon" href="favicon.svg" type="image/svg">
+  <link rel="shortcut icon" href="assets/images/favicon/favicon.svg" type="image/svg">
   <!-- BOOTSTRAP CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
   <!-- WBUILDER CSS -->
