--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wbuilder</title>
   <!-- FAVICON ICON -->
-  <link rel="shortcut icon" href="favicon.svg" type="image/svg">
+  <link rel="shortcut icon" href="assets/images/favicon/favicon.svg" type="image/svg">
   <!-- DATA TABLE CSS -->
   <link rel="stylesheet" href="https://cdn.datatables.net/v/bs5/dt-1.12.1/datatables.min.css">
 	<!-- BACK-TO-TOP CSS -->
